rnsc/test_data/rns_integration/error/parser/type_hints/methodref/trailing_token_recovers.rns
.class @methodref MyClass methodName (I)V trailing